<resources>
    <string name="app_name">LocationFavorite</string>
    <string name="msg_please_fill_in_all_fields">Please fill in all fields</string>
    <string name="msg_error_User">Add at least 3 or less than 12 letters</string>
    <string name="msg_error_Password">password incorrect</string>
    <string name="msg_savedData">Registered</string>
    <string name="cancelar">Cancelar</string>
    <string name="save">Save</string>
    <string name="ex_my_restaurant_favorit">Ex: My restaurant favorit</string>
    <string name="new_location">New location</string>
    <string name="name_of_location">Name of location</string>
    <string name="create_account">Create Account</string>
    <string name="start_saving_your_favorite_locations">Start saving your favorite locations</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="my_places">My Places</string>
    <string name="save_and_organize_your_favorite_locations">Save and organize your favorite locations</string>
    <string name="easy_navigation">Easy navigation</string>
    <string name="heart">🤍</string>
    <string name="save_favorites">Save favorites</string>
    <string name="sign_in">Sign in</string>
    <string name="maps">🗺️</string>
</resources>