<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/gpslove" />

        <TextView
            android:text="@string/new_location"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Space
        android:layout_height="16dp"
        android:layout_width="match_parent" />

    <EditText
        android:id="@+id/et_local_name"
        android:hint="@string/ex_my_restaurant_favorit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_outline"
        android:padding="12dp" />

    <Space
        android:layout_height="16dp"
        android:layout_width="match_parent" />

    <!-- Botões Cancelar (esquerda) e Salvar (direita) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:textColor="#000000" />

        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btn_save"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#B2FFB2"
            android:textColor="#000000" />
    </LinearLayout>

    <Space
        android:layout_height="12dp"
        android:layout_width="match_parent" />
    <Button
        android:id="@+id/btn_pick_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2AB17F"
        android:text="Escolher Foto"
        android:textColor="#FFFFFF" />

</LinearLayout>
